* immersive-reader-button correct vertical and horizontal alignment when it's next to other buttons

--- a/dashboard/app/assets/stylesheets/application.scss
+++ b/dashboard/app/assets/stylesheets/application.scss
@@ -3930,8 +3930,6 @@ html[dir=rtl] {
   background-color: $neutral_white !important;
   float: right;
   border: 2px solid $neutral_dark;
-  margin-top: 1px !important;
-  margin-right: 2px;
   height: 16px;
   padding: 6px !important;
 
